src/widgets/snapshots/tvision__widgets__static_text__tests__snapshot_label_normal.snap
---
source: src/widgets/static_text.rs
expression: screen.snapshot()
---
size: 12x1
cursor: hidden
text:
| Name       |
attr:
|abaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(4) bg=BIOS(7)
