src/widgets/snapshots/tvision__widgets__static_text__tests__snapshot_static_text_centered.snap
---
source: src/widgets/static_text.rs
expression: screen.snapshot()
---
size: 12x2
cursor: hidden
text:
|  centered  |
|plain       |
attr:
|aaaaaaaaaaaa|
|aaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
